<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="32dp">

        <ProgressBar
            android:id="@+id/pb_login_progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tv_login_headline"
            style="@style/TextAppearance.HotelRanking.HeadlineLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:text="@string/login_to_your_existing_account"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_login_subheadline"
            style="@style/TextAppearance.HotelRanking.LabelSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/please_fill_the_form_to_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_login_headline" />

        <com.c22ho01.hotelranking.customview.ValidateableTextField
            android:id="@+id/vtf_login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="58dp"
            app:layout_constraintTop_toBottomOf="@id/tv_login_subheadline"
            app:validFieldHint="@string/username"
            app:validFieldRequired="true" />

        <com.c22ho01.hotelranking.customview.ValidateableTextField
            android:id="@+id/vtf_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/vtf_login_username"
            app:validFieldHint="@string/password"
            app:validFieldObscure="true"
            app:validFieldRequired="true" />


        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:enabled="false"
            android:text="@string/login"
            app:layout_constraintTop_toBottomOf="@id/vtf_login_password"
            tools:enabled="true" />

        <TextView
            android:id="@+id/tv_dont_have_acc"
            style="@style/TextAppearance.HotelRanking.LabelLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/don_t_have_an_account"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_login" />

        <Button
            android:id="@+id/btn_go_to_create_acc"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/create_account"
            app:layout_constraintTop_toBottomOf="@id/tv_dont_have_acc" />

        <TextView
            android:id="@+id/tv_login_or"
            style="@style/TextAppearance.HotelRanking.LabelLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/or"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_go_to_create_acc" />

        <Button
            android:id="@+id/btn_google_signin"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/sign_in_with_google"
            app:icon="@drawable/google_icon"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@null"
            app:layout_constraintTop_toBottomOf="@id/tv_login_or" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

